--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -34,6 +34,7 @@
 <body>
 <a th:href="@{/people}">Table</a>
 <a th:href="@{people/new}">Form</a>
+<a th:href="@{people/authentication}">Log in</a>
 </body>
 </html>
 
