--- a/src/main/webapp/WEB-INF/views/show.html
+++ b/src/main/webapp/WEB-INF/views/show.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentication Page</title>
+    <title>Show</title>
     <style>
         body {
             background-color: #080710;
@@ -15,7 +14,6 @@
             height: 100vh;
             margin: 0;
         }
-
         .container {
             background-color: rgba(255, 255, 255, 0.13);
             border-radius: 10px;
@@ -24,43 +22,30 @@
             box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
             padding: 30px;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-
-        .container h1 {
-            font-size: 32px;
-            font-weight: 500;
-            line-height: 42px;
-            margin-bottom: 30px;
+        .container p {
+            font-size: 20px;
+            font-weight: 300;
+            margin-bottom: 10px;
+            text-align: left;
         }
-
-        .container input[type="text"],
-        .container input[type="password"] {
+        .container .data {
             background-color: rgba(255, 255, 255, 0.07);
             border-radius: 3px;
             padding: 10px 20px;
-            display: block;
-            width: 100%;
+            display: inline-block;
             margin-bottom: 10px;
-            border: none;
-            color: #9f9f9f;
-            font-size: 20px;
-            font-weight: 300;
-            box-sizing: border-box;
         }
-
-
-        .container input::placeholder {
-            color: #9f9f9f;
-        }
-
         .link-container {
             display: flex;
             justify-content: center;
             align-items: center;
             margin-top: 20px;
         }
-
-        .link-container a {
+        .link-container button {
             display: inline-block;
             background-color: #4CAF50;
             color: white;
@@ -71,34 +56,25 @@
             text-decoration: none;
             font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
-
-        .link-container a:hover {
+        .link-container button:hover {
             background-color: #45a049;
         }
-        .error {
-            background-color: #ff0000;
-            color: #ffffff;
-            padding: 10px;
-            border-radius: 3px;
-            margin-bottom: 10px;
+        .link-container a {
+            color: white;
         }
 
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>Login to your account</h1>
-    <form th:action="@{/people/authenticate}" method="post">
-        <input type="text" name="login" placeholder="Login" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <div class="link-container">
-            <button type="submit">Log in</button>
-        </div>
-    </form>
-    <div th:if="${error}" class="error">
-        <p>{{error}}</p>
-    </div>
+    <p class="data" th:text="'Name: ' + ${person.name}"></p>
+    <p class="data" th:text="'Surname: ' + ${person.surname}"></p>
+    <p class="data" th:text="'Second name: ' + ${person.second_name}"></p>
+    <p class="data" th:text="'Email: ' + ${person.email}"></p>
+
+    <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 </div>
 </body>
 </html>
