--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -35,6 +35,8 @@
 <a th:href="@{/people}">Table</a>
 <a th:href="@{people/new}">Form</a>
 <a th:href="@{people/authentication}">Log in</a>
+<a th:href="@{/admin}">Administrator</a>
+
 </body>
 </html>
 
